--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
   <h1>Amal    </h1>
-  <p>Welcome to my website!</p>
+  <p>I create this fucking shit!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
